--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                 </a>
             </li>
 
+             <li>
+                <a href="https://drive.google.com/file/d/1vpWb8hIBmte92oKovHIdvG4eYu0X9QXh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">
+                    Certificate 8:Network Security Support Engineer
+                </a>
+            </li>
             
         </ul>
     </section>
