--- a/index.html
+++ b/index.html
@@ -178,10 +178,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:your.email@example.com">tekluabebe0962@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">www.linkedin.com/in/tekluabebe212</a></p>
-        <p>GitHub: <a href="https://github.com/yourprofile" target="_blank">https://github.com/tekluabebe</a></p>
+       
         <form id="contact-form">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -198,10 +195,27 @@
       
 
     <footer>
-        <p>&copy; Teklu Abebe 2025. All rights reserved.</p>
-    </footer>
+  <div class="footer-container">
+    <p>&copy; 2025 Teklu Abebe. All rights reserved.</p>
+
+    <div class="social-links">
+      <a href="mailto:tekluabebe0962@gmail.com" class="footer-icon" title="Email">
+        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" />
+      </a>
+
+      <a href="https://www.linkedin.com/in/tekluabebe212" target="_blank" class="footer-icon" title="LinkedIn">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+      </a>
+
+      <a href="https://github.com/tekluabebe" target="_blank" class="footer-icon" title="GitHub">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" />
+      </a>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
+
 
 
 
