--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
                     Certificate 8:Network Security Support Engineer
                 </a>
             </li>
+
+                         <li>
+                <a href = "https://drive.google.com/file/d/1Rd0nd39-cl6uU4avmEEBkLvyCPDPQ7FH/view?usp=drive_link">
+                    Certificate 8:Introduction to Computer Networking
+                </a>
+            </li>
             
             <li>
                 <a href="https://www.mygreatlearning.com/certificate/GGUZTGUW" target="_blank" rel="noopener noreferrer">
@@ -216,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
